k8s/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app-deploy
  namespace: nodejs-app
  labels:
    app: nodejs-app
spec:
  selector:
    matchLabels:
      app: nodejs-app
  replicas: 2
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
        - name: nodejs-app
          image: 686591753714.dkr.ecr.eu-west-3.amazonaws.com/nodejs-app:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-service
  namespace: nodejs-app
  labels:
    app: nodejs-app
spec:
  selector:
    app: nodejs-app
  type: ClusterIP
  ports:
    - name: nodejs-app
      port: 8000
      targetPort: 8000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-app-ingress
  namespace: nodejs-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: nodeapp.karimdevops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs-app-service
                port:
                  number: 8000
